<resources>
    <string-array name="ExpMatrixSlots">

        <item>DI5007</item>
        <item>213197362</item>
        <item>*********Sprout+MraidSanity************</item>
        <item>ExpImaiAll</item>
        <item>512805036</item>
        <item>ExpHtml5All</item>
        <item>33384584</item>
        <item>ExpUrlHtml5All</item>
        <item>220354228</item>
        <item>ResizeHtml5All</item>
        <item>891761974</item>
        <item>ExpImraidAll</item>
        <item>261243554</item>
        <item>ExpiMraidAudioVideo</item>
        <item>729650270</item>
        <item>ExpMraidAll</item>
        <item>528503584</item>
        <item>ExpUrlMraid</item>
        <item>955255098</item>
        <item>ExpSproutAll</item>
        <item>343488688</item>
        <item>ExpSproutMraid</item>
        <item>151026630</item>
        <item>RichBannerSprout</item>
        <item>805866944</item>
        <item>SproutClickToRich</item>
        <item>328857782</item>
        <item>LocationAccess</item>
        <item>845743656</item>
        <item>VideoRepositioning</item>
        <item>872525706</item>
    </string-array>
    <string-array name="Exp2PMatrixSlots">
        <item>*********2-Piece Sprout+MraidSanity************</item>
        <item>IntImaiAll-2p</item>
        <item>588168846</item>
        <item>IntHtml5All-2p</item>
        <item>177422664</item>
        <item>MraidSanity-2p</item>
        <item>811516520</item>
        <item>ImraidSanity-2p</item>
        <item>465600262</item>
        <item>ImraidAVSanity-2p</item>
        <item>480517658</item>
        <item>IntSproutAll-2p</item>
        <item>937750108</item>
        <item>IntSproutMraid-2p</item>
        <item>688637878</item>
    </string-array>
    <string-array name="ExpProdSlots">
        <item>**********Prod***********</item>
        <item>1431977751489005</item>
    </string-array>
    <string-array name="ExpPhpSlots">
        <item>**********AutoClickTest***********</item>
        <item>**********Visible+No Interaction***********</item>
        <item>1502000001</item>
        <item>1502000002</item>
        <item>1502000003</item>
        <item>1502000004</item>
        <item>1502000005</item>
        <item>1502000006</item>
        <item>1502000007</item>
        <item>1502000008</item>
        <item>1502000009</item>
        <item>1502000010</item>
        <item>1502000011</item>
        <item>1502000012</item>
        <item>1502000013</item>
        <item>1502000014</item>
        <item>1502000015</item>
        <item>1502000016</item>
        <item>1502000017</item>
        <item>1502000020</item>
        <item>1502000021</item>

        <item>**********No Visible+No Interaction***********</item>
        <item>1501000001</item>
        <item>1501000002</item>
        <item>1501000003</item>
        <item>1501000004</item>
        <item>1501000005</item>
        <item>1501000006</item>
        <item>1501000007</item>
        <item>1501000008</item>
        <item>1501000009</item>
        <item>1501000010</item>
        <item>1501000011</item>
        <item>1501000012</item>
        <item>1501000013</item>
        <item>1501000014</item>
        <item>1501000015</item>
        <item>1501000016</item>
        <item>1501000017</item>
        <item>1501000020</item>
        <item>1501000021</item>
        <item>1501000022</item>

        <item>**********Visible+Valid Interaction***********</item>
        <item>1503010001</item>
        <item>1503020001</item>
        <item>1503030001</item>
        <item>1503040001</item>
        <item>1503050001</item>
        <item>1503060001</item>
        <item>1503070001</item>
        <item>1503080001</item>
        <item>1503090001</item>
        <item>1503100000</item>

        <item>**********Visible+Invalid Interaction***********</item>
        <item>1502000018</item>

        <item>**********PermissionTest***********</item>
        <item>1201280001</item>
        <item>1201430001</item>
        <item>1201410006</item>
        <item>1201300001</item>
        <item>1201260001</item>
        <item>1201310001</item>

        <item>**********Supports***********</item>
        <item>1201270001</item>
        <item>1201270002</item>
        <item>1201270003</item>
        <item>1201270004</item>
        <item>1201270005</item>
        <item>1201270006</item>
        <item>1201270007</item>
        <item>1201270008</item>
        <item>1201270009</item>
        <item>1201270010</item>
        <item>1201270011</item>
        <item>1201270012</item>
        <item>1201270013</item>

        <item>**********ExpandCTAs***********</item>
        <item>1201030001</item>
        <item>1201280001</item>
        <item>1201260001</item>
        <item>1201500001</item>
        <item>1201330007</item>
        <item>1201000001</item>
        <item>1201010001</item>
        <item>1201020001</item>
        <item>1201040001</item>
        <item>1201300001</item>
        <item>1201320002</item>
        <item>1201430001</item>
        
        
        
        
        
        
        
        
        
        
        
        
        
        
        

        <item>*********ExpandLifeCycle************</item>
        <item>1201510002</item>
        <item>1201510003</item>
        <item>1201500001</item>
        <item>1201510001</item>
        <item>1201510007</item>
        <item>1201510101</item>

        <item>*********OrientationLock************</item>
        <item>1201400013</item>
        <item>1201400014</item>

        <item>1201400043</item>
        <item>1201400044</item>
        <item>1201400045</item>
        <item>1201400046</item>
        <item>1201400047</item>
        <item>1201400048</item>
        <item>1201400049</item>
        <item>1201400050</item>
        <item>1201400051</item>
        <item>1201400052</item>
        <item>1201400053</item>
        <item>1201400054</item>
        <item>1201400056</item>
        <item>1201400057</item>
        <item>1201400058</item>
        <item>1201400059</item>
        <item>1201400060</item>
        <item>1201400061</item>
        <item>1201400062</item>
        <item>1201400063</item>
        <item>1201400064</item>
        <item>1201400065</item>
        <item>1201400066</item>
        <item>1201400067</item>

        <item>*********TwoPieceAds************</item>
        <item>1204320001</item>
        <item>1204320002</item>
        <item>1204320003</item>
        <item>1204320004</item>
        <item>1204320005</item>
        <item>1204320006</item>
        <item>1204320007</item>
        <item>1204320008</item>
        <item>1204320009</item>
        <item>1204320010</item>
        <item>1204320011</item>
        <item>1204320012</item>
        <item>1204320013</item>

        <item>*********IMAI************</item>
        <item>11030001</item>
        <item>11030002</item>
        <item>11030003</item>
        <item>11030009</item>
        <item>11030010</item>
        <item>11030013</item>
        <item>11030014</item>
        <item>11030017</item>
        <item>11030018</item>
        <item>11030021</item>
        <item>11030022</item>
        <item>11030025</item>
        <item>11030026</item>
        <item>11020001</item>
        <item>11020002</item>

        <item>*********AdRegression************</item>
        <item>13010001</item>
        <item>13020001</item>
        <item>13030001</item>
        <item>13010013</item>

        <item>**********ResizedAds***********</item>
        <item>1202530101</item>
        <item>1202530102</item>
        <item>1202530003</item>
        <item>1202530004</item>
        <item>1202530038</item>
        <item>1202530006</item>
        <item>1202530007</item>
        <item>1202530008</item>
        <item>1202530009</item>
        <item>1202530010</item>
        <item>1202530011</item>
        <item>1202530012</item>
        <item>1202530013</item>
        <item>1202530014</item>
        <item>1202530015</item>
        <item>1202530016</item>
        <item>1202530017</item>
        <item>1202530018</item>
        <item>1202530019</item>
        <item>1202530020</item>
        <item>1202530021</item>
        <item>1202530022</item>
        <item>1202530023</item>
        <item>1202530024</item>
        <item>1202530025</item>
        <item>1202530038</item>
        <item>1202530038</item>
        <item>1202530038</item>
        <item>1202530029</item>
        <item>1202530030</item>
    </string-array>
    <string-array name="ExpE2ESlots">
        <item>*********E2E************</item>
        <item>adpool</item>
        <item>1427435074321753</item>
        <item>ifc</item>
        <item>1427435647492903</item>
        <item>ads</item>
        <item>1427232188023</item>
    </string-array>
    <string-array name="ErrorSlots">
        <item>**********ErrorCodes***********</item>
        <item>1000000000</item>
        <item>2000000000</item>
        <item>3000000000</item>
        <item>4000000000</item>
        <item>5000000000</item>
        <item>6000000000</item>
        <item>7000000000</item>
        <item>8000000000</item>
        <item>9000000000</item>
        <item>10000000000</item>
    </string-array>
    <string name="InterstitialAd">Interstitial Ad:</string>
    <string name="getInterstitial">Get Interstitial Ad</string>
    <string name="showInterstitial">Show Interstitial Ad</string>
    <string name="Content">getContent from First AppId</string>
    <string name="Load1">Load Ad with first appid</string>
    <string name="PublisherContentImage">RenderImage/Impression Beacon for first Appid</string>
    <string name="ClickBeacon">ClickBeacon for first Appid</string>
    <string name="LoadCustom">Load Ad CustomNative</string>
    <string name="PublisherContentImageCustom">RenderImage/Impression Beacon Custom</string>
    <string name="ClickBeaconCustom">ClickBeacon Custom</string>
    <string name="ContentCustom">getContent Custom</string>
    <string name="PublisherContentImageCustomUrl">RenderImage/Impression Beacon Custom with Url
    </string>
    <string name="ClickBeaconCustomUrl">ClickBeacon Custom with Url</string>
</resources>